# individual-proj-4

./: README.md  template.yaml
lambda_function/: Cargo.toml
lambda_function/package/: output.json
lambda_function/src/: main.rs
